--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
   margin:  5%;
+  margin-bottom: 20px;
   color: #FEF2BF;
 }
 
@@ -53,4 +54,24 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey  !important;
+}
+
+.buttons{
+  width: 100%;
+}
+
+#start-button{
+  display: block;
+  margin: 20px auto;
+  border-radius: 10px;
+  padding: 5px;
+  width: 320px;
+  height: 100px;
+  background-color: green;
+  color: white;
+  font-size: 2.5rem;
+  font-family: 'Press Start 2P', cursive;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
