--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
+*{
+   user-select: none;
+}
 body {
   text-align: center;
   background-color: #011F3F;
   margin: 0;
   box-sizing: border-box;
-  user-select: none;
 }
 
 #level-title {
